--- a/.github/workflows/pull-changes.yml
+++ b/.github/workflows/pull-changes.yml
@@ -16,4 +16,4 @@ jobs:
         key: ${{ secrets.KEY }}
         # TODO: change default port number
         # port: ${{ secrets.PORT }}
-        script: whoami
+        script: touch helloworld.txt
